--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "react": "^18.2.0",
+    "react-autosuggest": "^10.1.0",
     "react-cookie": "^7.1.4",
     "react-dom": "^18.2.0",
     "react-just-parallax": "^3.1.16",
