--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^18.2.0",
     "react-just-parallax": "^3.1.16",
     "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
     "reactjs-popup": "^2.0.6",
     "scroll-lock": "^2.1.5",
     "tailwind": "^4.0.0"
